--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     View in your space
   </button>
   <div id="ar-prompt">
-    <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    <img src="https://modelviewer.dev/shared-assets/icons/hand.png" alt="">
   </div>
 </model-viewer>
 </body>
